--- a/exercises/assets/css/style-3.css
+++ b/exercises/assets/css/style-3.css
@@ -12,25 +12,7 @@ img { width: 100%; height: auto }
 /* ============ CUSTOM PROPERTIES ============  */
 
 :root {
-
-    /* Alternatives to default sans-serif font */
-    --font-sans: -apple-system, system-ui, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Fira Sans, Ubuntu, Oxygen, Oxygen Sans, Cantarell, Droid Sans, Apple Color Emoji, Segoe UI Emoji, Segoe UI Emoji, Segoe UI Symbol, Lucida Grande, Helvetica, Arial, sans-serif;
-
-     /* Alternatives to default serif font */
-    --font-serif: Cambria, "Hoefler Text", Utopia, "Liberation Serif", "Nimbus Roman No9 L Regular", Times, "Times New Roman", serif;
-
-     /* Alternatives to default monospace font */
-    --font-monospace: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-
-    /* Fluid font size scale */
-    --fs-sm: clamp(0.8rem, 0.17vi + 0.76rem, 0.89rem);
-    --fs-base: clamp(1rem, 0.34vi + 0.91rem, 1.19rem);
-    --fs-md: clamp(1.25rem, 0.61vi + 1.1rem, 1.58rem);
-    --fs-lg: clamp(1.56rem, 1vi + 1.31rem, 2.11rem);
-    --fs-xl: clamp(1.95rem, 1.56vi + 1.56rem, 2.81rem);
-    --fs-xxl: clamp(2.44rem, 2.38vi + 1.85rem, 3.75rem);
-    --fs-xxxl: clamp(3.05rem, 3.54vi + 2.17rem, 5rem);
-        /* Color variables */
+    /* Color variables */
     --black-000: #000000;
     --white-000: #ffffff;
     --trans-000: transparent;
@@ -244,26 +226,40 @@ img { width: 100%; height: auto }
     --trend-800: #1f364d;
     --trend-900: #0e2439;
 
+    /* Alternatives to default sans-serif font */
+    --font-sans: -apple-system, system-ui, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Fira Sans, Ubuntu, Oxygen, Oxygen Sans, Cantarell, Droid Sans, Apple Color Emoji, Segoe UI Emoji, Segoe UI Emoji, Segoe UI Symbol, Lucida Grande, Helvetica, Arial, sans-serif;
+
+     /* Alternatives to default serif font */
+    --font-serif: Cambria, "Hoefler Text", Utopia, "Liberation Serif", "Nimbus Roman No9 L Regular", Times, "Times New Roman", serif;
+
+     /* Alternatives to default monospace font */
+    --font-monospace: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+
+    /* Fluid font SIZE scale */
+    --fs-sm: clamp(0.8rem, 0.17vi + 0.76rem, 0.89rem);
+    --fs-base: clamp(1rem, 0.34vi + 0.91rem, 1.19rem);
+    --fs-md: clamp(1.25rem, 0.61vi + 1.1rem, 1.58rem);
+    --fs-lg: clamp(1.56rem, 1vi + 1.31rem, 2.11rem);
+    --fs-xl: clamp(1.95rem, 1.56vi + 1.56rem, 2.81rem);
+    --fs-xxl: clamp(2.44rem, 2.38vi + 1.85rem, 3.75rem);
+    --fs-xxxl: clamp(3.05rem, 3.54vi + 2.17rem, 5rem);
 }
 
-
 /*  ============== LAYOUT FOR CONTENT CONTAINERS ================= */
-
 nav, header, section, footer { position: relative; display: block }
 header, section, footer { margin-left: auto; margin-right: auto; overflow: hidden }
 /* Under last content item, zero the bottom margin */
 section > *:last-child { margin-bottom: 0 !important }
 
 /*  ====================== HEADER ======================== */
-
 /* Padding around content: laptops / desktops  */
 @media (min-width: 768px) {
     header { 
-        padding-top: 3%;
+        padding-top: 2%; 
         padding-right: 20%;
-        padding-bottom: 0;
-        padding-left: 20% 
-    } 
+        padding-bottom: 5%;
+        padding-left: 20%
+    }
 }
                         
 /* Padding around content: mobiles */
@@ -271,30 +267,29 @@ section > *:last-child { margin-bottom: 0 !important }
     header { 
         padding-top: 5%;
         padding-right: 5%;
-        padding-bottom: 0;
-        padding-left: 5% 
+        padding-bottom: 0%;
+        padding-left: 5%
     }
 }
-
 /*  ====================== SECTIONS ======================== */
 
-/* Padding around content: laptops / desktops */
+/* Padding around content: laptops / desktops  */
 @media (min-width: 768px) {
     section { 
-        padding-top: 4%;
+        padding-top: 3%;
         padding-right: 20%;
-        padding-bottom: 4%;
-        padding-left: 20%     
+        padding-bottom: 3%;
+        padding-left: 20%
     }
 }
                         
 /* Padding around content: mobiles */
 @media (max-width: 767px) {
     section { 
-        padding-top: 5%;
+        padding-left: 5%;
         padding-right: 5%;
         padding-bottom: 5%;
-        padding-left: 5%;
+        padding-left: 5% 
     }
 }
 
@@ -308,46 +303,45 @@ section > * { max-width: 1600px; margin-left: auto; margin-right: auto }
 
 /* ============= TYPOGRAPHY ============ */
 
+body { background-color: var(--blue-200);
+    font-family: var(--font-serif);}
+
 h1 {
     font-size: var(--fs-xxxl);
+    margin-top: 32px;
+    margin-bottom: 16px;
     line-height: 1.2;
+    color: var(--blue-800)
 }
 
+header h2 {
+    color: var(--blue-800);
+    font-weight: normal; font-style: italic;}
 h2 {
     font-size: var(--fs-xl);
     line-height: 1.2;
-    margin-top: 42px;
-    margin-bottom: 16px;
-}
-
-h3 {
-    font-size: var(--fs-lg);
-    margin-top: 48px; 
-    margin-bottom: 4px;
-    line-height: 1.2;
+    margin-bottom: 6px;
+    color: var(--blue-800)
+    
 }
 
 p {
 	font-size: var(--fs-base);
     line-height: 1.7;
 	margin-bottom: 12px;
+    color: var(--blue-900)
 }
 
-.section-1 {
-    background-color: lemonchiffon;
-}
 
-.section-2 {
-    background-color: lightgreen;
-}
+.section1 { background-color: var(--trend-100); }
+.section2 { background-color: var(--trend-200); }
+.section3 { background-color: var(--trend-300); }
+.section4 { background-color: var(--trend-400); }
+.section5 { background-color: var(--trend-500); }
+.section6 { background-color: var(--trend-600); }
+.section7 { background-color: var(--trend-100); }
+.section5 h2, .section5 p { color: var(--white-000); }
+.section6 h2, .section6 p { color: var(--white-000); }
+.section7 h2, .section7 p { color: var(--white-000); }
 
-.section-3 {
-    background-color: lightblue;
-}
 
-.section-4 {
-    background-color: darkblue;
-}
-
-.section-4 h2 { color: white}
-.section-4 p { color: white}
