--- a/exercises/assets/css/style-4.css
+++ b/exercises/assets/css/style-4.css
@@ -277,17 +277,14 @@ section *:last-child { margin-bottom: 0 !important }
 
 section h3:nth-child(1) { margin-top: 0 }
 
-img {margin-bottom: 24px;
-    box-shadow: 8px 10px 8px #888;}
-
-
 @media  (max-width: 767px) {
     section h3:nth-child(1) { margin-top: 1px }
 }
 
 
 /* Web page */
-body {  font-family: var(--font-serif) }
+body {  font-family: 'Merriweather', serif;
+}
 
 /* Main heading */
 header h1 {
@@ -304,12 +301,13 @@ header h1 {
 
 /* Small heading */
 header h2 {
-    font-size: var(--fs-lg);
+    font-size: var(--fs-md);
     color: var(--blue-800);
     line-height: 1.4;
     text-align: center;
     color:var(--yellow-100);
     font-weight: 400;
+    letter-spacing: 1px;
 }
 
 /* Smaller headings */
@@ -317,26 +315,51 @@ h3 {
     font-size: var(--fs-xl);
     color: #000;
     letter-spacing:-1px;
-    margin-top: 40px;
+    margin-top: 60px;
     margin-bottom: 2px;
     line-height: 1.2;
+    letter-spacing: 1px;
 }
 
 /* Text paragraphs */
 p {
-    font-size: var(--fs-md);
+    font-size: var(--fs-base);
     color: var(--slate-800);
     line-height: 1.6;
     margin-top: 0;
     margin-bottom: 16px;
     font-weight: 400
 }
+/* Images */
+img {margin-bottom: 24px;
+box-shadow: 8px 10px 8px #888;}
 
-/* Google Fonts */
-body {
-    font-family: 'Inter', sans-serif;
+/* ===== VIDEO ===== */
+.video-container {
+    position: relative;
+    width: 100%;
+    aspect-ratio: 16 / 9;
+    margin-bottom: 32px;
+}
+                      
+.video-container iframe {
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
 
-h1, h2, h3 {
-    font-family: 'Playfair Display', serif;
+/* ======== HYPERLINKS ======== */
+a:link, a:visited {
+    color: #000; 
+    transition: all 0.3s ease;
+    text-decoration-thickness: 2px;
+    text-decoration-color: #000;
+    text-underline-offset: 7px;
+}
+
+a:hover, a:focus, a:active {
+    color: var(--yellow-700);
+    text-decoration-thickness: 2px;
+    text-decoration-color: var(--blue-600);
+    text-underline-offset: 7px;
 }
