--- a/exercises/assets/css/style-5.css
+++ b/exercises/assets/css/style-5.css
@@ -276,7 +276,7 @@ h1, h2, h2 { color: var(--green-700) }
 
 section *:last-child { margin-bottom: 0 !important }
 
-body { font-family: var(--font-sans) }
+
 
 
 /* Main heading */
@@ -286,14 +286,24 @@ h1 {
     line-height: 1.1;    
     margin-bottom: 30px;
     text-align: center;
-    letter-spacing: -2px
+    letter-spacing: -1px;
+    font-family: 'Oswald', sans-serif;
 }
 
 header p { 
     font-size: var(--fs-md);
     color: var(--green-900) ;
     text-align: center;
-    font-weight:bold
+    font-weight:bold;
+    font-family: "Lato", sans-serif;
+
+}
+header p1 { 
+    font-size: var(--fs-sm);
+    color: var(--green-900) ;
+    text-align: center;
+    font-weight:bold;
+    font-family: "Lato", sans-serif;
 }
 
 /* Small headings */
@@ -303,6 +313,7 @@ h2 {
     line-height: 1.2;    
     margin-top: 42px;
     margin-bottom: 14px;
+    font-family: 'Oswald', sans-serif;
 }
 
 section h2:nth-child(1) { margin-top: 0 }
@@ -313,40 +324,30 @@ p {
     color: #000;
     line-height: 1.6;
     margin-bottom: 20px;
+    font-family: "Lato", sans-serif;
 }
-
 img {margin-bottom: 24px;
-    border-radius: 25px;}
+border-radius: 25px;}
 
-    /* Google Fonts */
-body {
-    font-family: 'Source Sans Pro', sans-serif;
+.highlight-text {background-color: var(--green-700);
+    color: white;
+    padding: 3px 12px 6px 12px;
+    width: fit-content;
 }
 
-h1, h2 {
-    font-family: 'Merriweather', serif;
+
+/* ======== HYPERLINKS ======== */
+a:link, a:visited {
+    color: var(--green-800); 
+    transition: all 0.3s ease;
+    text-decoration-thickness: 2px;
+    text-decoration-color: var(--green-800);
+    text-underline-offset: 6px;
 }
 
-/* YouTube Responsive Video */
-.youtube-video {
-    margin-top: 60px;
-    text-align: center;
-}
-
-.video-container {
-    position: relative;
-    width: 100%;
-    height: 0;
-    padding-bottom: 56.25%; /* Proporção 16:9 */
-    margin: 30px 0;
-}
-
-.video-container iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-    box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+a:hover, a:focus, a:active {
+    color: var(--rose-600);
+    text-decoration-thickness: 2px;
+    text-decoration-color: var(--rose-600);
+    text-underline-offset: 6px;
 }
