--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -205,7 +205,7 @@ body, html {
 
 /* Background Image with Reduced Visibility */
 .bg {
-  background-image: url('assets\img\pokemon.jpg');
+    background-image: url('../img/profile.jpg');
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
