Name and Student ID added

--- a/exercises/assets/css/hero-image.css
+++ b/exercises/assets/css/hero-image.css
@@ -1,3 +1,5 @@
+/* Caio Medeiros - 77281 */
+
 /* Simple Hero Block with Image */
 .hero-block {
     background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('../img/max.png');
