--- a/portfolio/smoothies/assets/css/custom.css
+++ b/portfolio/smoothies/assets/css/custom.css
@@ -1,3 +1,4 @@
+/* Caio Medeiros - 77281 */
 
 .section-selector-1 > p { color: var(--purple-800) }
 .section-selector-2 { background-color: var(--pink-200) }
