--- a/portfolio/project-hero/assets/css/custom-1.css
+++ b/portfolio/project-hero/assets/css/custom-1.css
@@ -1,3 +1,5 @@
+/* Caio Medeiros - 77281 */
+
 /* ============== Do not delete this ========== */
 .section-selector-1 { background-color: var(--gray-200) }
 .col-3 h3 { margin-bottom: 16px }
